Prospectus updated and MOBILE WHITE MARGIN FIXED (#50)
* any overflow-x is now hidden

* re-added the accidently removed text in the about section

* Move modals outside of element so it does not get cut off by slant divider

* fixed slanted divider problem on wide screens

* nav bar reorder

* divider padding improved for mobile

* modals fixed so that they show up on top and mroe mobile friendly

* fadeinup animations re-added

* modal positioning centered for mobile friendly

* modal width maximum at 99vw for mobile friendly

* max-width of faq section set to 100vw

* prospectus updated

* prospectus:hover color fixed

* prospectus:focus color fixed

* prospectus:active color fixed

* prospectus-btn btn-info class removed for color correction on active

* white margin on right fixed by fixing prospectus-btn

--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ h6 {
     left: -260px;
     width: 260px;
     overflow-y: auto;
+    overflow-x: hidden;
     transition: none;
   }
 }
@@ -1647,13 +1648,24 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-color: #c72027;
   border: 0;
   color: #fff;
+  margin: 0 15vw;
+}
+.modal.modal-wide .modal-dialog {
+  width: 90%;
+}
+
+.modal-wide .modal-body {
+  overflow-y: auto;
 }
 
 .pros-modal-open:hover,
 .prospectus-modal-btn:hover,
+.prospectus-btn:hover,
+.prospectus-btn:active,
 .sponsor-btn:hover,
 .pros-modal-open:focus,
 .prospectus-modal-btn:focus,
+.prospectus-btn:focus,
 .sponsor-btn:focus {
   background-color: #e0072f;
   color: #fff;
